--- a/src/app/components/shared/card-preview.component.html
+++ b/src/app/components/shared/card-preview.component.html
@@ -1,4 +1,3 @@
-<div class="preview-card" [ngClass]="animationType" [style.fontFamily]="font">
-  <h3>{{ title }}</h3>
-  <p>{{ description }}</p>
+<div>
+  <h2>Card Preview</h2>
 </div>
