--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@use "bootstrap/scss/bootstrap" as *;
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bradley+Hand&display=swap');
 
 body {
   font-family: 'Roboto', 'Open Sans', 'Bradley Hand', cursive, sans-serif;
